--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -20,8 +20,8 @@
     .highlight-modal, .comment-modal, .download-modal {
         display: none;
         position: absolute;
-        width: 60%;
-        height: 60%;
+        width: 80%;
+        height: 80%;
         padding: 1rem;
     }
     //Highlight Modal
@@ -35,12 +35,13 @@
           width: 100%;
           height: 100%;
           flex-flow: column nowrap;
+          justify-content: center;
 
             .img-wrapper {
                 width: 75%;
-                height: 50%;
-                background: $color__blue;
-                margin-top: 20px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 img{
                    max-width: 350px;
                    height: auto;
@@ -49,8 +50,8 @@
                    font-size: .75rem;
                    text-align: left;
                    max-width: 350px;
-                   line-height: 20px;
-                   margin: 0 auto;
+                   margin: 1rem auto;
+                   line-height: 1rem;
                  }
                  .share-icons{
                    text-align: center;
@@ -60,30 +61,29 @@
                     }
                  }
             }
-            h2 {
-                text-transform: uppercase;
-                color: white;
-                font-family: $font__header;
-                font-size: 2rem;
-                font-weight: 400;
-                border: 3px solid white;
-                border-width: 3px 0;
-                margin-bottom: 0;
-            }
-            p {
-              color: #ffffff;
-              font-family: $font__main;
-              font-size: 1rem;
-              margin-bottom:0;
-              font-weight: 300;
-              line-height: 10px;
-            }
-            .highlight-modal-button{
-              @include btn;
-              padding: 0.5rem 3rem;
-              margin: 1rem;
-              cursor: pointer;
-            }
+        }
+        h2 {
+          text-align: center;
+          color: white;
+          font-family: $font__header;
+          font-size: 2.5rem;
+          font-weight: 400;
+          border: 3px solid white;
+          border-width: 3px 0;
+          margin-bottom: 0;
+        }
+        p {
+          color: #ffffff;
+          font-family: $font__main;
+          font-size: 1rem;
+          margin: 1rem 2rem;
+          font-weight: 300;
+        }
+        .highlight-modal-button{
+          @include btn;
+          padding: 0.5rem 3rem;
+          margin: 1rem;
+          cursor: pointer;
         }
     }
     //Comments Modal
@@ -94,21 +94,21 @@
             display: flex;
             align-items: center;
             flex-flow: column nowrap;
+            justify-content: center;
             width: 100%;
             height: 100%;
         }
         h2 {
-            text-transform: uppercase;
+            text-align: center;
             color: white;
             font-family: $font__header;
-            font-size: 2rem;
+            font-size: 2.5rem;
             font-weight: 400;
             border: 3px solid white;
             border-width: 3px 0;
+            margin-bottom: 0;
         }
         .img-wrapper {
-            width: 75%;
-            height: 50%;
             background: $color__blue;
             text-align: center;
             .fa-commenting-o{
@@ -131,45 +131,35 @@
            display: flex;
            align-items: center;
            flex-flow: column nowrap;
+           justify-content: center;
            width: 100%;
            height: 100%;
        }
        h2 {
-           text-transform: uppercase;
-           color: white;
-           font-family: $font__header;
-           font-size: 2rem;
-           font-weight: 400;
-           border: 3px solid white;
-           border-width: 3px 0;
-           margin-bottom: 2px;
+          text-align: center;
+          color: white;
+          font-family: $font__header;
+          font-size: 2.5rem;
+          font-weight: 400;
+          border: 3px solid white;
+          border-width: 3px 0;
+          margin-bottom: 0;
        }
        p{
-           font-weight: 300;
-           color: #fff;
+          text-align: center;
+          max-width: 500px;
+          color: #ffffff;
+          font-family: $font__main;
+          font-size: 1rem;
+          margin: 2rem;
+          font-weight: 300;
        }
-       .img-wrapper {
-           width: 75%;
-           height: auto;
-           background: $color__blue;
-           padding: 0px;
         .download-img{
           max-width: 400px;
           margin: 0 auto;
           text-align: center;
           margin-bottom: 10px;
         }
-         img{
-           width: 60px;
-           height: auto;
-           display: inline-block;
-           margin-right: 10px;
-         }
-         .fa-download{
-          font-size: 3.5rem;
-          color:#fff;
-         }
-       }
        .download-page-link {
            @include btn;
            padding: 0.5rem 3rem;
@@ -356,43 +346,25 @@
 
     //Highlight Modal
     .highlight-modal {
-
         .highlight-modal-wrapper {
-
             .img-wrapper {
-              img{
-                 display: none;
-               }
+                display: none;
                p{
                  max-width: 350px;
                }
             }
-            h2 {
-                font-size: 1.5rem;
-            }
-            p{
-              line-height: 25px;
-            }
             .highlight-modal-button{
               padding: 0.5rem 1rem;
               margin: 0;
-              margin-top: -20px;
               cursor: pointer;
             }
         }
       }
     //Download Modal
     .download-modal {
-       h2 {
-           font-size: 1.5rem;
-       }
        .fa-download{
           font-size: 1.5rem;
          }
-
-       p{
-           font-size: .75rem;
-       }
        .download-page-link {
           padding: 0.5rem 1rem;
           margin: 0rem;
@@ -401,12 +373,7 @@
       }
     //Comments Modal
     .comment-modal {
-
-        h2 {
-            font-size: 1.5rem;
-        }
         .img-wrapper {
-              height: 50%;
               display: flex;
               justify-content: center;
               align-items:center;
@@ -424,6 +391,14 @@
   }
 
   @media #{$tablet-desktop}{
+    .highlight-modal, .comment-modal, .download-modal {
+        width: 95%;
+        height: 80%;
+        h2 {
+          font-size: 1.5rem;
+        }
+    }
+
     .unlock-download-modal, .start-download-modal, .thankyou-modal {
         width: 95%;
         height: 90%;
@@ -435,57 +410,23 @@
 
     //Highlight Modal
     .highlight-modal {
-
         .highlight-modal-wrapper {
-
             .img-wrapper {
                p{
                  max-width: 300px;
                }
             }
-            h2 {
-                font-size: 1rem;
-            }
-            p{
-              line-height: 15px;
-              font-size: .75rem;
-            }
-            .highlight-modal-button{
-              padding: 0.2rem .5rem;
-              margin: 0;
-              margin-top: -20px;
-              cursor: pointer;
-              font-size: .75rem;
-            }
         }
       }
     //Download Modal
     .download-modal {
-       h2 {
-           font-size: 1rem;
-       }
        .fa-download{
           font-size: 1rem;
          }
-
-       p{
-           font-size: .75rem;
-       }
        .download-page-link {
           padding: 0.5rem 1rem;
           margin: 0rem;
-          font-size: .75rem;
        }
-      }
-    //Comments Modal
-    .comment-modal {
-
-        h2 {
-            font-size: 1rem;
-        }
-        .comment-section-link {
-            font-size: .75rem;
-        }
       }
 
   }
