--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3053,8 +3053,8 @@ strong {
 .highlight-modal, .comment-modal, .download-modal {
   display: none;
   position: absolute;
-  width: 60%;
-  height: 60%;
+  width: 80%;
+  height: 80%;
   padding: 1rem; }
 
 .highlight-modal {
@@ -3069,12 +3069,17 @@ strong {
     width: 100%;
     height: 100%;
     -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap; }
+        flex-flow: column nowrap;
+    -ms-flex-pack: center;
+        justify-content: center; }
     .highlight-modal .highlight-modal-wrapper .img-wrapper {
       width: 75%;
-      height: 50%;
-      background: #70b3cb;
-      margin-top: 20px; }
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-align: center;
+          align-items: center; }
       .highlight-modal .highlight-modal-wrapper .img-wrapper img {
         max-width: 350px;
         height: auto; }
@@ -3082,45 +3087,44 @@ strong {
         font-size: .75rem;
         text-align: left;
         max-width: 350px;
-        line-height: 20px;
-        margin: 0 auto; }
+        margin: 1rem auto;
+        line-height: 1rem; }
       .highlight-modal .highlight-modal-wrapper .img-wrapper .share-icons {
         text-align: center; }
         .highlight-modal .highlight-modal-wrapper .img-wrapper .share-icons .fa {
           font-size: 1.2rem;
           padding: 10px; }
-    .highlight-modal .highlight-modal-wrapper h2 {
-      text-transform: uppercase;
-      color: white;
-      font-family: "Titillium Web", sans-serif;
-      font-size: 2rem;
-      font-weight: 400;
-      border: 3px solid white;
-      border-width: 3px 0;
-      margin-bottom: 0; }
-    .highlight-modal .highlight-modal-wrapper p {
-      color: #ffffff;
-      font-family: "Roboto", sans-serif;
-      font-size: 1rem;
-      margin-bottom: 0;
-      font-weight: 300;
-      line-height: 10px; }
-    .highlight-modal .highlight-modal-wrapper .highlight-modal-button {
-      color: #fff;
-      text-decoration: none;
-      border: solid #fff 2px;
-      border-radius: 30px;
-      background-color: #70b3cb;
-      font-weight: 500;
-      font-size: 1.1rem;
-      transition: all ease 0.4s;
-      padding: 0.5rem 3rem;
-      margin: 1rem;
-      cursor: pointer; }
-      .highlight-modal .highlight-modal-wrapper .highlight-modal-button:hover {
-        color: #70b3cb;
-        border: solid #70b3cb 2px;
-        background-color: #fff; }
+  .highlight-modal h2 {
+    text-align: center;
+    color: white;
+    font-family: "Titillium Web", sans-serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    border: 3px solid white;
+    border-width: 3px 0;
+    margin-bottom: 0; }
+  .highlight-modal p {
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-size: 1rem;
+    margin: 1rem 2rem;
+    font-weight: 300; }
+  .highlight-modal .highlight-modal-button {
+    color: #fff;
+    text-decoration: none;
+    border: solid #fff 2px;
+    border-radius: 30px;
+    background-color: #70b3cb;
+    font-weight: 500;
+    font-size: 1.1rem;
+    transition: all ease 0.4s;
+    padding: 0.5rem 3rem;
+    margin: 1rem;
+    cursor: pointer; }
+    .highlight-modal .highlight-modal-button:hover {
+      color: #70b3cb;
+      border: solid #70b3cb 2px;
+      background-color: #fff; }
 
 .comment-modal {
   background: #70b3cb;
@@ -3132,19 +3136,20 @@ strong {
         align-items: center;
     -ms-flex-flow: column nowrap;
         flex-flow: column nowrap;
+    -ms-flex-pack: center;
+        justify-content: center;
     width: 100%;
     height: 100%; }
   .comment-modal h2 {
-    text-transform: uppercase;
+    text-align: center;
     color: white;
     font-family: "Titillium Web", sans-serif;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 400;
     border: 3px solid white;
-    border-width: 3px 0; }
+    border-width: 3px 0;
+    margin-bottom: 0; }
   .comment-modal .img-wrapper {
-    width: 75%;
-    height: 50%;
     background: #70b3cb;
     text-align: center; }
     .comment-modal .img-wrapper .fa-commenting-o {
@@ -3176,38 +3181,32 @@ strong {
         align-items: center;
     -ms-flex-flow: column nowrap;
         flex-flow: column nowrap;
+    -ms-flex-pack: center;
+        justify-content: center;
     width: 100%;
     height: 100%; }
   .download-modal h2 {
-    text-transform: uppercase;
+    text-align: center;
     color: white;
     font-family: "Titillium Web", sans-serif;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 400;
     border: 3px solid white;
     border-width: 3px 0;
-    margin-bottom: 2px; }
+    margin-bottom: 0; }
   .download-modal p {
-    font-weight: 300;
-    color: #fff; }
-  .download-modal .img-wrapper {
-    width: 75%;
-    height: auto;
-    background: #70b3cb;
-    padding: 0px; }
-    .download-modal .img-wrapper .download-img {
-      max-width: 400px;
-      margin: 0 auto;
-      text-align: center;
-      margin-bottom: 10px; }
-    .download-modal .img-wrapper img {
-      width: 60px;
-      height: auto;
-      display: inline-block;
-      margin-right: 10px; }
-    .download-modal .img-wrapper .fa-download {
-      font-size: 3.5rem;
-      color: #fff; }
+    text-align: center;
+    max-width: 500px;
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-size: 1rem;
+    margin: 2rem;
+    font-weight: 300; }
+  .download-modal .download-img {
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 10px; }
   .download-modal .download-page-link {
     color: #fff;
     text-decoration: none;
@@ -3433,33 +3432,21 @@ strong {
       background-color: #fff; }
 
 @media (max-width: 900px) {
-  .highlight-modal .highlight-modal-wrapper .img-wrapper img {
+  .highlight-modal .highlight-modal-wrapper .img-wrapper {
     display: none; }
-  .highlight-modal .highlight-modal-wrapper .img-wrapper p {
-    max-width: 350px; }
-  .highlight-modal .highlight-modal-wrapper h2 {
-    font-size: 1.5rem; }
-  .highlight-modal .highlight-modal-wrapper p {
-    line-height: 25px; }
+    .highlight-modal .highlight-modal-wrapper .img-wrapper p {
+      max-width: 350px; }
   .highlight-modal .highlight-modal-wrapper .highlight-modal-button {
     padding: 0.5rem 1rem;
     margin: 0;
-    margin-top: -20px;
     cursor: pointer; }
-  .download-modal h2 {
-    font-size: 1.5rem; }
   .download-modal .fa-download {
     font-size: 1.5rem; }
-  .download-modal p {
-    font-size: .75rem; }
   .download-modal .download-page-link {
     padding: 0.5rem 1rem;
     margin: 0rem;
     font-size: 1rem; }
-  .comment-modal h2 {
-    font-size: 1.5rem; }
   .comment-modal .img-wrapper {
-    height: 50%;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
@@ -3474,6 +3461,11 @@ strong {
     margin-top: 20px; } }
 
 @media (max-width: 600px) {
+  .highlight-modal, .comment-modal, .download-modal {
+    width: 95%;
+    height: 80%; }
+    .highlight-modal h2, .comment-modal h2, .download-modal h2 {
+      font-size: 1.5rem; }
   .unlock-download-modal, .start-download-modal, .thankyou-modal {
     width: 95%;
     height: 90%;
@@ -3482,28 +3474,8 @@ strong {
       font-size: 1.5rem; }
   .highlight-modal .highlight-modal-wrapper .img-wrapper p {
     max-width: 300px; }
-  .highlight-modal .highlight-modal-wrapper h2 {
-    font-size: 1rem; }
-  .highlight-modal .highlight-modal-wrapper p {
-    line-height: 15px;
-    font-size: .75rem; }
-  .highlight-modal .highlight-modal-wrapper .highlight-modal-button {
-    padding: 0.2rem .5rem;
-    margin: 0;
-    margin-top: -20px;
-    cursor: pointer;
-    font-size: .75rem; }
-  .download-modal h2 {
-    font-size: 1rem; }
   .download-modal .fa-download {
     font-size: 1rem; }
-  .download-modal p {
-    font-size: .75rem; }
   .download-modal .download-page-link {
     padding: 0.5rem 1rem;
-    margin: 0rem;
-    font-size: .75rem; }
-  .comment-modal h2 {
-    font-size: 1rem; }
-  .comment-modal .comment-section-link {
-    font-size: .75rem; } }
+    margin: 0rem; } }
